<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/add_habit_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/add_title_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_habit_padding">

            <TextView
                android:id="@+id/add_title_label"
                android:text="@string/title_label"
                style="@style/EditTextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/add_title_edit_text"
                android:layout_width="0dp"
                android:hint="@string/title_hint"
                style="@style/EditTextStyle"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/add_title_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_desc_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_habit_category_margin"
        app:layout_constraintTop_toBottomOf="@id/add_title_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_habit_padding">

            <TextView
                android:id="@+id/add_desc_label"
                android:text="@string/description_label"
                style="@style/EditTextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/add_desc_edit_text"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="4dp"
                android:hint="@string/description_hint"
                style="@style/EditTextStyle"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                app:layout_constraintTop_toBottomOf="@id/add_desc_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_unit_set_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_habit_category_margin"
        app:layout_constraintTop_toBottomOf="@id/add_desc_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/add_habit_padding">

            <TextView
                android:id="@+id/add_unit_set_label"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/unit_type"
                style="@style/EditTextLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_unit_set_examples_label"
                app:layout_constraintBottom_toBottomOf="@id/add_unit_set_examples_label" />

            <Spinner
                android:id="@+id/add_unit_set_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                app:layout_constraintTop_toTopOf="@id/add_unit_set_examples_text"
                app:layout_constraintBottom_toTopOf="@id/unit_set_warning_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_unit_set_examples_text"/>

            <TextView
                android:id="@+id/add_unit_set_examples_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/unit_set_examples"
                style="@style/EditTextLabel"
                app:layout_constraintStart_toStartOf="@id/add_unit_set_examples_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/add_unit_set_examples_text"/>

            <TextView
                android:id="@+id/add_unit_set_examples_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/UnitExampleView"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/add_unit_set_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/unit_set_warning_label"/>

            <TextView
                android:id="@+id/unit_set_warning_label"
                android:text="@string/unit_set_warning"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_habit_category_margin"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>