<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/details_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/details_title_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/details_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_label"
                android:textSize="@dimen/details_label_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/details_habit_title"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_title_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/details_description_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_category_margin"
        app:layout_constraintTop_toBottomOf="@id/details_title_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_padding">

            <TextView
                android:id="@+id/details_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textSize="@dimen/details_label_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/details_habit_description"
                style="@style/EditTextStyle"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/details_description_label"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/details_unit_set_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/details_category_margin"
        app:layout_constraintTop_toBottomOf="@id/details_description_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_padding">

            <TextView
                android:id="@+id/details_unit_set_label"
                android:text="@string/unit_set_label"
                style="@style/EditTextLabel"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/details_examples_label"/>

            <TextView
                android:id="@+id/details_unit_set_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/UnitExampleView"
                app:layout_constraintTop_toBottomOf="@id/details_unit_set_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/details_units_text_view"/>

            <TextView
                android:id="@+id/details_examples_label"
                android:text="@string/unit_set_examples"
                style="@style/EditTextLabel"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/details_unit_set_label"
                app:layout_constraintBottom_toBottomOf="@id/details_unit_set_label"
                app:layout_constraintStart_toStartOf="@id/details_units_text_view"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/details_units_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/UnitExampleView"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/details_examples_label"
                app:layout_constraintStart_toEndOf="@id/details_unit_set_text_view"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>